# RSquare

./: CMakeLists.txt  README.md  defaultBins.txt  install.sh
src/: Dosage.cpp  Dosage.h  FileTypeCheck.h  Haplotype.cpp  Haplotype.h  RSquare.cpp  RSquare.h  SummaryData.cpp  SummaryData.h  helperFunctions.h  main.cpp
